--- a/project_inventory/templates/project_inventory/index.html
+++ b/project_inventory/templates/project_inventory/index.html
@@ -1,3 +1,12 @@
+<html>
+<head>
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
+</head>
+<body>
 <h1>Project List</h1>
 
 {% if project_list %}
@@ -24,3 +33,6 @@
 {% else %}
     <p>No projects available.</p>
 {% endif %}
+
+</body>
+</html>
