Details page, project model changes

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -1,60 +1,4 @@
-<html>
-  <head>
-    <style>
-      table,
-      th,
-      td {
-        border: 1px solid black;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Project List</h1>
+<h1>Welcome to the Lassonde Capstone Inventory Database</h1>
+<p>Welcome page placeholder</p>
 
-    {% if project_list %}
-    <table>
-      <tr>
-        <th>Project ID</th>
-        <th>Project Name</th>
-        <th>Field</th>
-        <th>Team</th>
-        <th>Supervisor</th>
-        <th>Date Proposed</th>
-        <th>Complete?</th>
-        <th>Date Complete</th>
-        <th>Industry Project?</th>
-        <th>Industry Partner</th>
-        <th>Cost</th>
-        <th>Notes</th>
-      </tr>
-      {% for proj in project_list %}
-      <tr>
-        <td>{{proj.id}}</td>
-        <td>{{proj.name}}</td>
-        <td>{{proj.field}}</td>
-        <td>{{proj.students}}</td>
-        <td>{{proj.supervisor}}</td>
-        <td>{{proj.date_proposed}}</td>
-        <td>{{proj.is_complete}}</td>
-        <td>{{proj.date_complete}}</td>
-        <td>{{proj.is_industry_proj}}</td>
-        <td>{{proj.industry_partners}}</td>
-        <td>{{proj.cost}}</td>
-        <td>{{proj.notes}}</td>
-      </tr>
-
-      {% endfor %}
-    </table>
-    {% else %}
-    <p>No projects available.</p>
-    {% endif %}
-
-    <button onclick="location.href = '/projects/add'">New Project</button>
-
-    <form action="{% url 'projects:delete'%}" method="post">
-      {% csrf_token %}
-      <input type="text" id="proj_id" name="proj_id" /><br />
-      <input type="submit" value="Delete Project" />
-    </form>
-  </body>
-</html>
+<button onclick="location.href = '/projects/list'">See Projects</button>
