--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <h1>Project List</h1>
-
+    <a href="{% url 'projects:settings' %}">Project Field Settings</a>
     {% if project_list %}
     <table>
       <tr>
         <th>Project ID</th>
         <th>Project Name</th>
-        <th>Field</th>
+        <th>Discipline</th>
         <th>Type</th>
         <th>Date Proposed</th>
         <th>Status</th>
@@ -26,7 +26,7 @@
       <tr>
         <td>{{proj.id}}</td>
         <td>{{proj.name}}</td>
-        <td>{{proj.get_field_display}}</td>
+        <td>{{proj.get_disciplines|linebreaks}}</td>
         <td>{{proj.get_type_display}}</td>
         <td>{{proj.date_proposed}}</td>
         <td>{{proj.get_status_display}}</td>
