--- a/projects/templates/projects/add.html
+++ b/projects/templates/projects/add.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+    {% bootstrap_messages %}
     <style>
       table,
       th,
@@ -9,13 +13,21 @@
     </style>
   </head>
   <body>
-    <h1>Add a new project</h1>
+    {% block content %}
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-12">
+            <h1>Add a new project</h1>
 
-    <form method="post">
-      {% csrf_token %} {{ form.as_p }}
-
-      <button type="submit">Save</button>
-    </form>
-    <a href="{% url 'projects:list' %}">Back</a>
+            <form method="post">
+              {% csrf_token %} 
+              {% bootstrap_form form %}
+              <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+            <a href="{% url 'projects:list' %}">Back</a>
+          </div>
+        </div>
+      </div>
+    {% endblock content %}
   </body>
 </html>
