--- a/projects/templates/projects/add_settings.html
+++ b/projects/templates/projects/add_settings.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+    {% bootstrap_messages %}
     <style>
       table,
       th,
@@ -9,13 +13,21 @@
     </style>
   </head>
   <body>
-    <h1>Add a new engineering discipline or UN Development Goal</h1>
+    {% block content %}
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-12">
+            <h1>Add a new engineering discipline or UN Development Goal</h1>
 
-    <form method="post">
-      {% csrf_token %} {{ form.as_p }}
+            <form method="post">
+              {% csrf_token %} {{ form.as_p }}
 
-      <button type="submit">Save</button>
-    </form>
-    <a href="{% url 'projects:settings' %}">Back</a>
+              <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+            <a href="{% url 'projects:settings' %}">Back</a>
+        </div>
+          </div>
+            </div>
+    {% endblock content %}
   </body>
 </html>
