--- a/projects/templates/projects/add.html
+++ b/projects/templates/projects/add.html
@@ -40,7 +40,7 @@
               {% bootstrap_form form %}
               <button type="submit" class="btn btn-primary">Save</button>
             </form>
-            <a href="{% url 'projects:list' %}">Back</a>
+            <a href="{% url 'projects:list' %}" class="btn btn-dark btn-block btn-sm m-1">Back</button>
           </div>
         </div>
       </div>
