--- a/projects/templates/projects/settings.html
+++ b/projects/templates/projects/settings.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    {% load django_bootstrap5 %}
+    {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     {% bootstrap_messages %}
