--- a/projects/templates/projects/add.html
+++ b/projects/templates/projects/add.html
@@ -38,9 +38,9 @@
             <form method="post">
               {% csrf_token %} 
               {% bootstrap_form form %}
-              <button type="submit" class="btn btn-primary">Save</button>
+              <button type="submit" class="btn btn-primary btn-block btn-sm m-1">Save</button>
             </form>
-            <a href="{% url 'projects:list' %}" class="btn btn-dark btn-block btn-sm m-1">Back</button>
+            <a href="{% url 'projects:list' %}" class="btn btn-dark btn-block btn-sm m-1">Back</a>
           </div>
         </div>
       </div>
