Linked contacts and projects together

--- a/contacts/templates/contacts/list.html
+++ b/contacts/templates/contacts/list.html
@@ -51,5 +51,6 @@
     {% endif %}
 
     <a href="{% url 'contacts:add' %}">New Industry Partner</a>
+    <a href="{% url 'homepage' %}" class="btn btn-dark btn-block btn-sm m-1">Back</a>
 </body>
 </html>
