--- a/contacts/templates/contacts/list.html
+++ b/contacts/templates/contacts/list.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load bootstrap5 %}
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
     <style>
       table,
       th,
       td {
         border: 1px solid black;
+        padding: 2px;
+        text-align: center;
       }
+
+      html {
+        display: table;
+        margin: auto;
+      }
+
+      body {
+        display: table-cell;
+        vertical-align: middle;
+      }
+
+      .del {
+        display: none
+      }
+
+
     </style>
 </head>
-<body>
+
+<body style="margin: auto">
     <h1>Industry Partner List</h1>
 
     {% if industry_partners_list %}
@@ -20,28 +43,28 @@
         <th>Address</th>
         <th>Website</th>
         <th>Phone #</th>
+          <th>Email</th>
         <th>Type</th>
         <th>Date Joined</th>
         <th>Status</th>
       </tr>
       {% for partner in industry_partners_list %}
-      <tr>
+      <tr style="">
         <td>{{partner.id}}</td>
         <td>{{partner.name}}</td>
         <td>{{partner.address}}</td>
         <td>{{partner.website}}</td>
         <td>{{partner.phone_number}}</td>
-        <td>{{partner.type}}</td>
+        <td>{{partner.email}}</td>
+          <td>{{partner.type}}</td>
           <td>{{partner.date_joined}}</td>
           <td>{{partner.status}}</td>
-        {% comment "Delete Button WIP" %}
         <td>
-          <form method="delete">
-            <input type="hidden" value="{{proj.id}}" name="delete_proj">
-            <input type="Submit">Delete</button>
+          <form method="post" action="{% url 'contacts:delete' partner.id %}">
+            {% csrf_token %}
+            <input type="Submit" value="Delete" class="btn btn-danger"/>
           </form>
         </td>
-        {%endcomment%}
       </tr>
 
       {% endfor %}
