Minor UI changes

--- a/contacts/templates/contacts/list.html
+++ b/contacts/templates/contacts/list.html
@@ -73,7 +73,7 @@
     <p>No Industry Partners Added.</p>
     {% endif %}
 
-    <a href="{% url 'contacts:add' %}">New Industry Partner</a>
+    <a href="{% url 'contacts:add' %}" class="btn btn-dark btn-block btn-sm m-1">New Industry Partner</a>
     <a href="{% url 'homepage' %}" class="btn btn-dark btn-block btn-sm m-1">Back</a>
 </body>
 </html>
