Combined project add and edit, project references contacts

--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -38,7 +38,7 @@
       <td>{{proj.date_proposed}}</td>
       <td>{{proj.get_status_display}}</td>
       <td>{{proj.date_complete}}</td>
-      <td>{{proj.industry_partners}}</td>
+      <td>{{proj.get_partner_name}}</td>
       <td>{{proj.cost}}</td>
       <td>{{proj.get_goals|linebreaks}}</td>
       <td>{{proj.notes}}</td>
