--- a/authentication/templates/authentication/login_register.html
+++ b/authentication/templates/authentication/login_register.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
     <style>
         .login--wrapper {
             display: flex;
@@ -25,6 +26,7 @@
 <body>
     <div class="container">
         <div class="login--wrapper">
+            {% if page == 'login'%}
             <form method="POST" class="form">
                 {% csrf_token %}
                 <h1>Login</h1>
@@ -38,7 +40,18 @@
                 <input type="password" class="form-control" name="password" id="exampleInputPassword1">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <p> Don't have an account? <a href="{%url 'register'%}"> Register</a><p>
             </form>
+            {% else %}
+            <form method="POST" class="form">
+                {% csrf_token %}
+                <h1>Register</h1>
+                <h4>You must register to use this application or please contact the admin.</h4>
+                {{form}}
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <p> Already have an account? <a href="{%url 'login'%}"> Login</a><p>
+            </form>
+            {% endif %}
         </div>
     </div>
 </body>
