Added discipline field
Added discipline field and completed other tasks

--- a/contacts/templates/contacts/list.html
+++ b/contacts/templates/contacts/list.html
@@ -59,6 +59,7 @@
           <td>{{partner.type}}</td>
           <td>{{partner.date_joined}}</td>
           <td>{{partner.status}}</td>
+          <td><a href="{% url 'contacts:edit' partner.id %}">Edit</a></td>
         <td>
           <form method="post" action="{% url 'contacts:delete' partner.id %}">
             {% csrf_token %}
