Changed supervisor to be manytomany

--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -23,7 +23,7 @@
       <th>Date Proposed</th>
       <th>Status</th>
       <th>Date Complete</th>
-      <th>Industry Partner</th>
+      {# <th>Industry Partner</th> #}
       <th>Cost</th>
       <th>UN Goals</th>
       <th>Notes</th>
@@ -38,7 +38,7 @@
       <td>{{proj.date_proposed}}</td>
       <td>{{proj.get_status_display}}</td>
       <td>{{proj.date_complete}}</td>
-      <td>{{proj.get_partner_name}}</td>
+      {# <td>{{proj.get_partner_name}}</td> #}
       <td>{{proj.cost}}</td>
       <td>{{proj.get_goals|linebreaks}}</td>
       <td>{{proj.notes}}</td>
