--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -60,6 +60,7 @@
                 <th>Date Proposed</th>
                 <th>Status</th>
                 <th>Date Complete</th>
+                <th colspan="3"> </th>
               </tr>
             </thead>
             <tbody>
@@ -69,7 +70,7 @@
                 <td>{{proj.name}}</td>
                 <td>{{proj.get_disciplines|linebreaks}}</td>
                 <td>{{proj.get_type_display}}</td>
-                <td>{{proj.supervisor}}</td>
+                <td>{% firstof proj.get_supervisors|linebreaks 'None Assigned' %}</td>
                 <td>{{proj.date_proposed}}</td>
                 <td>{{proj.get_status_display}}</td>
                 <td>{% firstof proj.date_complete 'Not Completed'%}</td>
