--- a/faculty/templates/faculty/list.html
+++ b/faculty/templates/faculty/list.html
@@ -18,6 +18,23 @@
       <div class="row my-5">
         <div class="col-md-12">
           <h1>Faculty List</h1>
+          <form method="GET" action="{% url 'faculty:list'%}">
+            {% csrf_token %} 
+            <div class="fieldWrapper">
+              {% for field in filter_form %}
+                  {{ field.errors }}
+              {% endfor %}
+              <h5>Filter By</h5>
+              <div class = "form-group">
+                <label>Name:</label> {{filter_form.name}}
+                <label>Role:</label> {{filter_form.role}}
+                <label>Department:</label> {{filter_form.department}}
+                <label>Fields of Interest:</label>{{filter_form.fields_of_interest}}
+                <input type="submit" value = "Apply" class="btn btn-primary"/>
+              </div>
+            </div>
+
+          </form>
           {% if faculty_list %}
           <table class="table">
             <thead>
@@ -27,7 +44,7 @@
                 <th>Role</th>
                 <th>Department</th>
                 <th>Fields of Interest</th>
-                <th>Notes</th>
+                <th colspan="3"> </th>
               </tr>
             </thead>
             <tbody>
@@ -38,7 +55,7 @@
                 <td>{{fac.role}}</td>
                 <td>{{fac.get_department_display}}</td>
                 <td>{{fac.fields_of_interest}}</td>
-                <td>{{fac.notes}}</td>
+                <td><a href="{% url 'faculty:details' fac.id %}">Details</a></td>
                 <td><a href="{% url 'faculty:edit' fac.id %}">Edit</a></td>
                 <td>
                   <form method="post" action="{% url 'faculty:delete' fac.id %}">
