Awards restrict projects by year

--- a/capstones/templates/capstones/add_award.html
+++ b/capstones/templates/capstones/add_award.html
@@ -33,7 +33,7 @@
             {% endfor %}
             {% endif %}
             
-            <h1>Add an award given out during the {{}}</h1>
+            <h1>Add an award given out during Capstone</h1>
 
             <form method="post">
               {% csrf_token %} 
