--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -121,7 +121,7 @@
                 <td><a href="{% url 'projects:detail' proj.id %}">Details</a></td>
                 <td><a href="{% url 'projects:edit' proj.id %}">Edit</a></td>
                 <td>
-                  <form method="post" action="{% url 'projects:delete' proj.id %}">
+                  <form method="POST" action="{% url 'projects:delete' proj.id %}">
                     {% csrf_token %}
                     <input type="Submit" value="Delete" class="btn btn-danger"/>
                   </form>
