--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -1,4 +1,8 @@
-<h1>Welcome to the Lassonde Capstone Inventory Database</h1>
-<p>Welcome page placeholder</p>
+{% extends "base.html" %}
+{% block content %}
 
-<button onclick="location.href = '/projects/list'">See Projects</button>
+    <h1>Welcome to the Lassonde Capstone Inventory Database</h1>
+    <p>Welcome page placeholder</p>
+
+    <button onclick="location.href = '/projects/list'" class="btn btn-dark btn-block btn-sm m-1">See Projects</button>
+{% endblock content %}
