--- a/authentication/templates/authentication/index.html
+++ b/authentication/templates/authentication/index.html
@@ -1,11 +1,11 @@
-{% load static %}
+{% extends "base.html" %}
 {% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-{% bootstrap_messages %}
+{% load static %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-<head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'authentication/css/style.css'%}">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-</head>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{%url 'homepage'%}">LIS</a>
@@ -46,7 +46,7 @@
       </div>
     </div>
   </nav>
-<body class="is-boxed has-animations">
+
     <div class="body-wrap boxed-container">
         <header class="site-header">
             <div class="container">
@@ -220,5 +220,6 @@
     </div>
 
     <script src="{% static 'authentication/js/main.min.js'%}"></script>
-</body>
+
+{% endblock content %}
 </html>
