--- a/faculty/templates/faculty/detail.html
+++ b/faculty/templates/faculty/detail.html
@@ -1,9 +1,7 @@
 <html>
-  <head>
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {% bootstrap_messages %}
+  {% extends "base.html" %}
+  {% load bootstrap5 %}
+  {% block content %}
     <style>
       table,
       th,
@@ -11,9 +9,6 @@
         border: 1px solid grey;
       }
     </style>
-  </head>
-  <body>
-    {% block content %}
     <div class="container">
       <div class="row my-5">
         <div class="col-md-12">
@@ -66,5 +61,4 @@
       </div>
     </div>
     {% endblock content %}
-  </body>
 </html>
