--- a/projects/templates/projects/import.html
+++ b/projects/templates/projects/import.html
@@ -1,9 +1,7 @@
 <html>
-  <head>
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {% bootstrap_messages %}
+  {% extends "base.html" %}
+  {% load bootstrap5 %}
+  {% block content %}
     <style>
       table,
       th,
@@ -11,9 +9,7 @@
         border: 1px solid black;
       }
     </style>
-  </head>
-  <body>
-    {% block content %}
+
       <div class="container">
         <div class="row my-5">
           <div class="col-md-12">
@@ -46,5 +42,4 @@
         </div>
       </div>
     {% endblock content %}
-  </body>
 </html>
