--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -1,10 +1,6 @@
 <html>
-  <head>
-    {% load static %}
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {% bootstrap_messages %}
+    {% extends "base.html" %}
+    {% block content %} 
     <style>
       table,
       th,
@@ -12,7 +8,6 @@
         border: 1px solid grey;
       }
     </style>
-  </head>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{%url 'homepage'%}">LIS</a>
@@ -41,8 +36,6 @@
       </div>
     </div>
   </nav>
-  <body>
-    {% block content %}
     <div class="container">
       <div class="row my-5">
         <div class="col-md-12">
@@ -142,5 +135,4 @@
       </div>
     </div>
     {% endblock content %}
-  </body>
 </html>
