Demo for capstone

--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -39,6 +39,12 @@
           <li class="nav-item">
             <a href="{% url 'contacts:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Industry Partners</a>    
           </li>
+          <li class="nav-item">
+            <a href="{% url 'capstones:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Capstones</a>    
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'faculty:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Faculty</a>    
+          </li>
           {% comment %} <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> {% endcomment %}
