--- a/contacts/templates/contacts/list.html
+++ b/contacts/templates/contacts/list.html
@@ -18,34 +18,40 @@
 
 
     </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{%url 'homepage'%}">LIS</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{%url 'homepage'%}">LIS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a href="{% url 'homepage' %}" class="btn btn-dark btn-block btn-sm m-1">Home</a>
+                </li>
             <li class="nav-item">
-                <a href="{% url 'homepage' %}" class="btn btn-dark btn-block btn-sm m-1">Home</a>
-              </li>
-          <li class="nav-item">
-            <a href="{% url 'projects:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Projects</a>
-          </li>
-          <li class="nav-item">
-            <a href="{% url 'contacts:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Industry Partners</a>    
-          </li>
-          {% comment %} <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li> {% endcomment %}
-        </ul>
-        <span class="navbar-text">
-            <b>Logged in as: {{request.user}}</b>
-            <a href="{% url 'login' %}" class="btn btn-primary btn-sm" tabindex="-1" role="button">Logout</a>
-        </span>
+              <a href="{% url 'projects:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'contacts:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Industry Partners</a>    
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'capstones:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Capstones</a>    
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'faculty:list' %}" class="btn btn-dark btn-block btn-sm m-1">View Faculty</a>    
+            </li>
+            {% comment %} <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li> {% endcomment %}
+          </ul>
+          <span class="navbar-text">
+              <b>Logged in as: {{request.user}}</b>
+              <a href="{% url 'login' %}" class="btn btn-primary btn-sm" tabindex="-1" role="button">Logout</a>
+          </span>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
     <h1>Industry Partner List</h1>
 
     {% if industry_partners_list %}
